updated link examples and removed scroll to top effect #978

--- a/src/_includes/modules/accordion-sidenav.html
+++ b/src/_includes/modules/accordion-sidenav.html
@@ -4,13 +4,13 @@
   <div class="accordion-body">
    <ul class="side-subnav">
     <li>
-     <a href="#">Basic Accordion</a>
+     <a href="javascript:;">Basic Accordion</a>
     </li>
     <li>
-     <a href="#">Side navigation accordion</a>
+     <a href="javascript:;">Side navigation accordion</a>
     </li>
     <li>
-     <a href="#">List Accordion</a>
+     <a href="javascript:;">List Accordion</a>
     </li>
    </ul>
   </div>
@@ -22,13 +22,13 @@
   <div class="accordion-body">
    <ul class="side-subnav">
     <li>
-     <a href="#" class="active">Links as Buttons</a>
+     <a href="javascript:;" class="active">Links as Buttons</a>
     </li>
     <li>
-     <a href="#">Buttons as Buttons</a>
+     <a href="javascript:;">Buttons as Buttons</a>
     </li>
     <li>
-     <a href="#">Disabled Buttons</a>
+     <a href="javascript:;">Disabled Buttons</a>
     </li>
    </ul>
   </div>
@@ -40,13 +40,13 @@
   <div class="accordion-body">
    <ul class="side-subnav">
     <li>
-     <a href="#">Contact form sample</a>
+     <a href="javascript:;">Contact form sample</a>
     </li>
     <li>
-     <a href="#">File input</a>
+     <a href="javascript:;">File input</a>
     </li>
     <li>
-     <a href="#">Radio buttons and checkboxes</a>
+     <a href="javascript:;">Radio buttons and checkboxes</a>
     </li>
    </ul>
   </div>
