--- a/src/_includes/modules/banner.html
+++ b/src/_includes/modules/banner.html
@@ -9,7 +9,7 @@
      the
      homepage.</p>
     <div class="btn-row p-b">
-     <a href="#" class="btn btn-lg btn-highlight m-t">Short link</a>
+     <a href="javascript:;" class="btn btn-lg btn-highlight m-t">Short link</a>
     </div>
    </div>
   </div>
