--- a/src/_includes/modules/breadcrumb.html
+++ b/src/_includes/modules/breadcrumb.html
@@ -1,7 +1,7 @@
 <nav aria-label="You are here">
  <ol class="breadcrumb">
-  <li><a href="#" title="Home page">Breadcrumb 1</a></li>
-  <li><a href="#" title="Examples landing page">Breadcrumb 2</a></li>
+  <li><a href="javascript:;" title="Home page">Breadcrumb 1</a></li>
+  <li><a href="javascript:;" title="Examples landing page">Breadcrumb 2</a></li>
   <li class="active">Breadcrumb 3</li>
  </ol>
 </nav>
