--- a/src/_includes/modules/icon-blocks.html
+++ b/src/_includes/modules/icon-blocks.html
@@ -1,39 +1,39 @@
 <!--ICON BLOCKS-->
 <div class="row p-t-80">
-    <div class="col-md-4 m-b-60">
-        <!-- Icon Blocks -->
-        <div class="shadow2 section-default text-center p-x-md p-b-lg">
-            <span class="icon-block bg-blue-gradient rounded-50x">
-                <span class="ca-gov-icon-ca-state relative-centered-y d-block" aria-hidden="true"></span>
-            </span>
-            <h3 class="h4 m-b-md m-t-0">Incredible standard post</h3>
-            <p class="m-b">Curabitur ut augue at mi eleifend lobortis. Ut tincidunt lacinia nisi pharetra.</p>
-            <a class="text-uppercase small" href="#">Read More about standard posts</a>
-        </div>
-        <!-- End Icon Blocks -->
-    </div>
-    <div class="col-md-4 m-b-60">
-        <!-- Icon Blocks -->
-        <div class="shadow2 section-primary text-center p-x-md p-b-lg">
-            <span class="icon-block bg-blue-gradient rounded-50x">
-                <span class="ca-gov-icon-lightbulb relative-centered-y d-block" aria-hidden="true"></span>
-            </span>
-            <h3 class="h4 m-b-md m-t-0">Job Opportunities</h3>
-            <p class="m-b">Curabitur ut augue at mi eleifend lobortis. Ut tincidunt lacinia nisi pharetra.</p>
-            <a class="text-uppercase small" href="#">Read More about Job Opportunities</a>
-        </div>
-        <!-- End Icon Blocks -->
-    </div>
-    <div class="col-md-4 m-b-60">
-        <!-- Icon Blocks -->
-        <div class="shadow2 section-standout text-center p-x-md p-b-lg">
-            <span class="icon-block bg-blue-gradient rounded-50x">
-                <span class="ca-gov-icon-graduate relative-centered-y d-block" aria-hidden="true"></span>
-            </span>
-            <h3 class="h4 m-b-md m-t-0">State Training</h3>
-            <p class="m-b">Curabitur ut augue at mi eleifend lobortis. Ut tincidunt lacinia nisi pharetra.</p>
-            <a class="text-uppercase small" href="#">Read More about State Training</a>
-        </div>
-        <!-- End Icon Blocks -->
-    </div>
+ <div class="col-md-4 m-b-60">
+  <!-- Icon Blocks -->
+  <div class="shadow2 section-default text-center p-x-md p-b-lg">
+   <span class="icon-block bg-blue-gradient rounded-50x">
+    <span class="ca-gov-icon-ca-state relative-centered-y d-block" aria-hidden="true"></span>
+   </span>
+   <h3 class="h4 m-b-md m-t-0">Incredible standard post</h3>
+   <p class="m-b">Curabitur ut augue at mi eleifend lobortis. Ut tincidunt lacinia nisi pharetra.</p>
+   <a class="text-uppercase small" href="javascript:;">Read More about standard posts</a>
+  </div>
+  <!-- End Icon Blocks -->
+ </div>
+ <div class="col-md-4 m-b-60">
+  <!-- Icon Blocks -->
+  <div class="shadow2 section-primary text-center p-x-md p-b-lg">
+   <span class="icon-block bg-blue-gradient rounded-50x">
+    <span class="ca-gov-icon-lightbulb relative-centered-y d-block" aria-hidden="true"></span>
+   </span>
+   <h3 class="h4 m-b-md m-t-0">Job Opportunities</h3>
+   <p class="m-b">Curabitur ut augue at mi eleifend lobortis. Ut tincidunt lacinia nisi pharetra.</p>
+   <a class="text-uppercase small" href="javascript:;">Read More about Job Opportunities</a>
+  </div>
+  <!-- End Icon Blocks -->
+ </div>
+ <div class="col-md-4 m-b-60">
+  <!-- Icon Blocks -->
+  <div class="shadow2 section-standout text-center p-x-md p-b-lg">
+   <span class="icon-block bg-blue-gradient rounded-50x">
+    <span class="ca-gov-icon-graduate relative-centered-y d-block" aria-hidden="true"></span>
+   </span>
+   <h3 class="h4 m-b-md m-t-0">State Training</h3>
+   <p class="m-b">Curabitur ut augue at mi eleifend lobortis. Ut tincidunt lacinia nisi pharetra.</p>
+   <a class="text-uppercase small" href="javascript:;">Read More about State Training</a>
+  </div>
+  <!-- End Icon Blocks -->
+ </div>
 </div><!-- End Group-->
