--- a/src/_includes/modules/location.html
+++ b/src/_includes/modules/location.html
@@ -1,16 +1,16 @@
 <div class="location contact">
-    <span class="ca-gov-icon-email"></span>
+ <span class="ca-gov-icon-email"></span>
 
-    <div class="contact">
-        <p class="address">
-            1234 Street Address, City, State, 95610
-        </p>
+ <div class="contact">
+  <p class="address">
+   1234 Street Address, City, State, 95610
+  </p>
 
-        <p class="other">
-            General Information: (916)323-5400<br>
-            FAX: (916)323-5440
-        </p>
+  <p class="other">
+   General Information: (916)323-5400<br>
+   FAX: (916)323-5440
+  </p>
 
-        <a href="#" class="btn btn-default btn-sm">View More Contacts</a>
-    </div>
+  <a href="javascript:;" class="btn btn-default btn-sm">View More Contacts</a>
+ </div>
 </div>
