--- a/src/_includes/modules/nav-side-accordion.html
+++ b/src/_includes/modules/nav-side-accordion.html
@@ -1,6 +1,6 @@
 <nav aria-labelledby="components-list">
  <div class="sr-only" id="components-list">Accordion side navigation</div>
- <a class="sidenav landing" href="#">Landing page</a>
+ <a class="sidenav landing" href="javascript:;">Landing page</a>
 
  <cagov-accordion class="sidenav">
   <details open>
@@ -8,20 +8,20 @@
    <div class="accordion-body">
     <ul class="side-subnav">
      <li>
-      <a href="#">Subpage 1</a>
+      <a href="javascript:;">Subpage 1</a>
      </li>
      <li>
-      <a href="#">Subpage 2</a>
+      <a href="javascript:;">Subpage 2</a>
      </li>
      <li>
-      <a href="#">Subpage 3</a>
+      <a href="javascript:;">Subpage 3</a>
      </li>
     </ul>
    </div>
   </details>
  </cagov-accordion>
 
- <a class="sidenav" href="#">Page 3</a>
- <a class="sidenav" href="#">Page 4</a>
- <a class="sidenav" href="#">Page 5</a>
+ <a class="sidenav" href="javascript:;">Page 3</a>
+ <a class="sidenav" href="javascript:;">Page 4</a>
+ <a class="sidenav" href="javascript:;">Page 5</a>
 </nav>
