--- a/src/_includes/modules/nav-side.html
+++ b/src/_includes/modules/nav-side.html
@@ -8,15 +8,17 @@
   </div>
   <div data-aria-accordion-panel class="p-0 m-0">
    <div class="list-group m-0">
-    <a href="#" class="list-group-item list-group-item-action"><span class="ca-gov-icon-apps" aria-hidden="true"></span>
+    <a href="javascript:;" class="list-group-item list-group-item-action"><span class="ca-gov-icon-apps"
+      aria-hidden="true"></span>
      Sub navigation link 1</a>
-    <a href="#" class="list-group-item list-group-item-action"><span class="ca-gov-icon-chat" aria-hidden="true"></span>
+    <a href="javascript:;" class="list-group-item list-group-item-action"><span class="ca-gov-icon-chat"
+      aria-hidden="true"></span>
      Sub navigation link 2</a>
-    <a href="#" class="list-group-item list-group-item-action"><span class="ca-gov-icon-phone"
+    <a href="javascript:;" class="list-group-item list-group-item-action"><span class="ca-gov-icon-phone"
       aria-hidden="true"></span> Sub navigation link 3</a>
-    <a href="#" class="list-group-item list-group-item-action"><span class="ca-gov-icon-email"
+    <a href="javascript:;" class="list-group-item list-group-item-action"><span class="ca-gov-icon-email"
       aria-hidden="true"></span> Sub navigation link 4</a>
-    <a href="#" class="list-group-item list-group-item-action"><span class="ca-gov-icon-calendar"
+    <a href="javascript:;" class="list-group-item list-group-item-action"><span class="ca-gov-icon-calendar"
       aria-hidden="true"></span> Sub navigation link 5</a>
    </div>
   </div>
@@ -27,12 +29,12 @@
   </div>
   <div data-aria-accordion-panel class="m-0 border border-bottom-0">
    <ul class="list-primary pb-4">
-    <li><a href="#">Sub-navigation list link 1</a></li>
-    <li><a href="#">Sub-navigation list link 2</a></li>
-    <li><a href="#">Sub-navigation list link 3</a></li>
+    <li><a href="javascript:;">Sub-navigation list link 1</a></li>
+    <li><a href="javascript:;">Sub-navigation list link 2</a></li>
+    <li><a href="javascript:;">Sub-navigation list link 3</a></li>
    </ul>
   </div>
-  <a href="#" class="list-group-item list-group-item-action"><span class="ca-gov-icon-calendar"
+  <a href="javascript:;" class="list-group-item list-group-item-action"><span class="ca-gov-icon-calendar"
     aria-hidden="true"></span> Regular link</a>
   <div data-aria-accordion-heading class="tab list-group-item border-bottom-0">
    <span class="ca-gov-icon-puzzle-piece" aria-hidden="true"></span> Link with sub-nav 3
@@ -57,7 +59,7 @@
     <button type="submit" class="btn btn-primary m-t">Submit</button>
    </form>
   </div>
-  <a href="#" class="list-group-item list-group-item-action"><span class="ca-gov-icon-info-bubble"
+  <a href="javascript:;" class="list-group-item list-group-item-action"><span class="ca-gov-icon-info-bubble"
     aria-hidden="true"></span> Regular link 2</a>
  </div>
 </div>
