--- a/src/_includes/modules/news-block.html
+++ b/src/_includes/modules/news-block.html
@@ -5,7 +5,7 @@
    <figure class="pos-rel m-b-0">
     <img class="img-fluid w-100" src="/images/news-grid1.jpg" alt="Image Description">
     <figcaption class="pos-abs top-sm p-l-0 rounded-3">
-     <span class="btn btn-sm btn-standout rounded-0" href="#">Month DD, YYYY</span>
+     <span class="btn btn-sm btn-standout rounded-0" href="javascript:;">Month DD, YYYY</span>
     </figcaption>
    </figure>
 
@@ -13,16 +13,17 @@
     <ul class="list-inline small m-y-0">
      <li class="list-inline-item">
       <span class="color-gray">By:</span>
-      <span class="color-gray-dark color-primary-hover" href="#">Author</span>
+      <span class="color-gray-dark color-primary-hover" href="javascript:;">Author</span>
      </li>
      <li class="list-inline-item">
       <span class="color-gray">In:</span>
-      <span class="color-gray-dark color-primary-hover" href="#">Agency</span>
+      <span class="color-gray-dark color-primary-hover" href="javascript:;">Agency</span>
      </li>
     </ul>
 
     <h3 class="h4 m-t-0 m-b-sm">
-     <a class="u-link-v5 color-gray-dark color-primary-hover link-before no-underline" href="#">Short title</a>
+     <a class="u-link-v5 color-gray-dark color-primary-hover link-before no-underline" href="javascript:;">Short
+      title</a>
     </h3>
 
     <p>Briefly tell your reader what they will find at the card's destination then link to the official news release or
@@ -38,7 +39,7 @@
    <figure class="pos-rel m-b-0">
     <img class="img-fluid w-100" src="/images/news-grid2.jpg" alt="Image description #2">
     <figcaption class="pos-abs top-sm p-l-0 rounded-3">
-     <span class="btn btn-sm btn-standout rounded-0" href="#">Month DD, YYYY</span>
+     <span class="btn btn-sm btn-standout rounded-0" href="javascript:;">Month DD, YYYY</span>
     </figcaption>
    </figure>
 
@@ -46,17 +47,17 @@
     <ul class="list-inline small m-y-0">
      <li class="list-inline-item">
       <span class="color-gray">By:</span>
-      <span class="color-gray-dark color-primary-hover" href="#">Author</span>
+      <span class="color-gray-dark color-primary-hover" href="javascript:;">Author</span>
      </li>
      <li class="list-inline-item">
       <span class="color-gray">In:</span>
-      <span class="color-gray-dark color-primary-hover" href="#">Agency</span>
+      <span class="color-gray-dark color-primary-hover" href="javascript:;">Agency</span>
      </li>
     </ul>
 
     <h3 class="h4 m-t-0 m-b-sm">
-     <a class="u-link-v5 color-gray-dark color-primary-hover link-before no-underline" href="#">Short title <span
-       class="sr-only">#2</span></a>
+     <a class="u-link-v5 color-gray-dark color-primary-hover link-before no-underline" href="javascript:;">Short title
+      <span class="sr-only">#2</span></a>
     </h3>
 
     <p>Briefly tell your reader what they will find at the card's destination then link to the official news release or
@@ -72,7 +73,7 @@
    <figure class="pos-rel m-b-0">
     <img class="img-fluid w-100" src="/images/news-grid3.jpg" alt="Image description #3">
     <figcaption class="pos-abs top-sm p-l-0 rounded-3">
-     <span class="btn btn-sm btn-standout rounded-0" href="#">Month DD, YYYY</span>
+     <span class="btn btn-sm btn-standout rounded-0" href="javascript:;">Month DD, YYYY</span>
     </figcaption>
    </figure>
 
@@ -80,17 +81,17 @@
     <ul class="list-inline small m-y-0">
      <li class="list-inline-item">
       <span class="color-gray">By:</span>
-      <span class="color-gray-dark color-primary-hover" href="#">Author</span>
+      <span class="color-gray-dark color-primary-hover" href="javascript:;">Author</span>
      </li>
      <li class="list-inline-item">
       <span class="color-gray">In:</span>
-      <span class="color-gray-dark color-primary-hover" href="#">Agency</span>
+      <span class="color-gray-dark color-primary-hover" href="javascript:;">Agency</span>
      </li>
     </ul>
 
     <h3 class="h4 m-t-0 m-b-sm">
-     <a class="u-link-v5 color-gray-dark color-primary-hover link-before no-underline" href="#">Short title <span
-       class="sr-only">#3</span></a>
+     <a class="u-link-v5 color-gray-dark color-primary-hover link-before no-underline" href="javascript:;">Short title
+      <span class="sr-only">#3</span></a>
     </h3>
 
     <p>Briefly tell your reader what they will find at the card's destination then link to the official news release or
