--- a/src/_includes/modules/panes.html
+++ b/src/_includes/modules/panes.html
@@ -1,98 +1,95 @@
 <!--Panes-->
 <div class="pane odd">
-    <div class="group-left">
-        <a class="pane-img" href="http://ca.gov/Agencies/Employment-Development-Department"
-            aria-label="Employment Development Department"
-            style="background: url('/images/sample/images/service-tiles/service-paid-family-leave.jpg')"></a>
-    </div>
-    <div class="group-right section-primary">
-        <div class="pane-content">
-            <h3 class="m-b-0">File for Paid Family Leave</h3>
-            <h4 class="m-t-0"><a href="http://ca.gov/Agencies/Employment-Development-Department">Employment Development
-                    Department (EDD)</a></h4>
+ <div class="group-left">
+  <a class="pane-img" href="http://ca.gov/Agencies/Employment-Development-Department"
+   aria-label="Employment Development Department"
+   style="background: url('/images/sample/images/service-tiles/service-paid-family-leave.jpg')"></a>
+ </div>
+ <div class="group-right section-primary">
+  <div class="pane-content">
+   <h3 class="m-b-0">File for Paid Family Leave</h3>
+   <h4 class="m-t-0"><a href="http://ca.gov/Agencies/Employment-Development-Department">Employment Development
+     Department (EDD)</a></h4>
 
-            <p>
-                California State provides Paid Family Leave (PFL) wage replacement benefits to eligible workers
-                who need time off work.
-            </p>
+   <p>
+    California State provides Paid Family Leave (PFL) wage replacement benefits to eligible workers
+    who need time off work.
+   </p>
 
-            <a href="/profile-landing.html" class="btn btn-default"><span class="ca-gov-icon-info"></span> See <span
-                    class="sr-only">File for Paid Family Leave</span> Details </a>
-            <ul class="m-0 p-0 list-inline text-right social">
-                <li class="list-inline-item"><a href="https://twitter.com/" aria-label="EDD twitter"
-                        class="no-underline"><span class="ca-gov-icon-twitter" aria-hidden="true"><span
-                                class="sr-only">Twitter</span></span></a></li>
-                <li class="list-inline-item"><a href="https://www.facebook.com/" aria-label="EDD facebook"
-                        class="no-underline"><span class="ca-gov-icon-facebook" aria-hidden="true"><span
-                                class="sr-only">Facebook</span></span></a></li>
-                <li class="list-inline-item"><a href="https://www.google.com/" aria-label="EDD google +"
-                        class="no-underline"><span class="ca-gov-icon-google-plus" aria-hidden="true"><span
-                                class="sr-only">Google+</span></span></a></li>
-            </ul>
-        </div>
-    </div>
+   <a href="/profile-landing.html" class="btn btn-default"><span class="ca-gov-icon-info"></span> See <span
+     class="sr-only">File for Paid Family Leave</span> Details </a>
+   <ul class="m-0 p-0 list-inline text-right social">
+    <li class="list-inline-item"><a href="https://twitter.com/" aria-label="EDD twitter" class="no-underline"><span
+       class="ca-gov-icon-twitter" aria-hidden="true"><span class="sr-only">Twitter</span></span></a></li>
+    <li class="list-inline-item"><a href="https://www.facebook.com/" aria-label="EDD facebook"
+      class="no-underline"><span class="ca-gov-icon-facebook" aria-hidden="true"><span
+        class="sr-only">Facebook</span></span></a></li>
+    <li class="list-inline-item"><a href="https://www.google.com/" aria-label="EDD google +" class="no-underline"><span
+       class="ca-gov-icon-google-plus" aria-hidden="true"><span class="sr-only">Google+</span></span></a></li>
+   </ul>
+  </div>
+ </div>
 </div>
 <div class="pane even">
-    <div class="group-left bg-highlight">
-        <div class="pane-content">
-            <h3 class="m-b-0">File for Unemployment</h3>
-            <h4 class="m-t-0"><a href="http://ca.gov/Agencies/Employment-Development-Department">Employment Development
-                    Department (EDD)</a></h4>
-            <a href="/profile-landing.html" class="btn btn-default"><span class="ca-gov-icon-info"></span> See <span
-                    class="sr-only">Employment Development Department</span> Details</a>
-            <a href="/profile-landing.html#locations-near-you" class="btn btn-default"><span
-                    class="ca-gov-icon-location"></span> <span class="sr-only">Find EDD</span> Locations Near You</a>
-            <p class="m-t-md">
-                This is an online service offered by the Employment Development Department (EDD).
-                It is a fast, convenient, and secure way for customers to file and manage claims.
-            </p>
-            <p>General Information: 877-238-4373</p>
-            <a href="#" class="btn btn-default btn-xs">File for Unemployment <span class="sr-only">Online</span></a>
-            <ul class="m-0 p-0 list-inline text-right social">
-                <li class="list-inline-item"><a href="https://twitter.com/" aria-label="EDD twitter link"
-                        class="no-underline"><span class="ca-gov-icon-twitter" aria-hidden="true"><span
-                                class="sr-only">Twitter</span></span></a></li>
-                <li class="list-inline-item"><a href="https://www.facebook.com/" aria-label="EDD facebook link"
-                        class="no-underline"><span class="ca-gov-icon-facebook" aria-hidden="true"><span
-                                class="sr-only">Facebook</span></span></a></li>
-                <li class="list-inline-item"><a href="https://www.google.com/" aria-label="EDD google plus link"
-                        class="no-underline"><span class="ca-gov-icon-google-plus" aria-hidden="true"><span
-                                class="sr-only">Google+</span></span></a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="group-right">
-        <a class="pane-img" aria-label="Employment Development Department (EDD)"
-            href="http://ca.gov/Agencies/Employment-Development-Department"
-            style="background: url('/images/sample/images/service-tiles/service-file-unemployment.jpg')"></a>
-    </div>
+ <div class="group-left bg-highlight">
+  <div class="pane-content">
+   <h3 class="m-b-0">File for Unemployment</h3>
+   <h4 class="m-t-0"><a href="http://ca.gov/Agencies/Employment-Development-Department">Employment Development
+     Department (EDD)</a></h4>
+   <a href="/profile-landing.html" class="btn btn-default"><span class="ca-gov-icon-info"></span> See <span
+     class="sr-only">Employment Development Department</span> Details</a>
+   <a href="/profile-landing.html#locations-near-you" class="btn btn-default"><span class="ca-gov-icon-location"></span>
+    <span class="sr-only">Find EDD</span> Locations Near You</a>
+   <p class="m-t-md">
+    This is an online service offered by the Employment Development Department (EDD).
+    It is a fast, convenient, and secure way for customers to file and manage claims.
+   </p>
+   <p>General Information: 877-238-4373</p>
+   <a href="javascript:;" class="btn btn-default btn-xs">File for Unemployment <span class="sr-only">Online</span></a>
+   <ul class="m-0 p-0 list-inline text-right social">
+    <li class="list-inline-item"><a href="https://twitter.com/" aria-label="EDD twitter link" class="no-underline"><span
+       class="ca-gov-icon-twitter" aria-hidden="true"><span class="sr-only">Twitter</span></span></a></li>
+    <li class="list-inline-item"><a href="https://www.facebook.com/" aria-label="EDD facebook link"
+      class="no-underline"><span class="ca-gov-icon-facebook" aria-hidden="true"><span
+        class="sr-only">Facebook</span></span></a></li>
+    <li class="list-inline-item"><a href="https://www.google.com/" aria-label="EDD google plus link"
+      class="no-underline"><span class="ca-gov-icon-google-plus" aria-hidden="true"><span
+        class="sr-only">Google+</span></span></a></li>
+   </ul>
+  </div>
+ </div>
+ <div class="group-right">
+  <a class="pane-img" aria-label="Employment Development Department (EDD)"
+   href="http://ca.gov/Agencies/Employment-Development-Department"
+   style="background: url('/images/sample/images/service-tiles/service-file-unemployment.jpg')"></a>
+ </div>
 </div>
 <div class="pane odd">
-    <div class="group-left">
-        <a class="pane-img" aria-label="Department of Parks and Recreation (PARKS)"
-            href="http://ca.gov/Agencies/Parks-and-Recreation-Department-of"
-            style="background: url('/images/sample/images/service-tiles/redwoods.jpg')"></a>
-    </div>
-    <div class="group-right section-primary">
-        <div class="pane-content">
-            <h3 class="m-b-0">Find a State Park</h3>
-            <h4 class="m-t-0"><a href="http://ca.gov/Agencies/Parks-and-Recreation-Department-of">Department of Parks
-                    and Recreation (PARKS)</a></h4>
-            <p>Find a State Park near you via the Parks and Recreation website. You can search by name, feature, region,
-                city, county, or alphabetically.</p>
-            <a href="/profile-landing.html" class="btn btn-default"><span class="ca-gov-icon-info"></span> See Details
-                <span class="sr-only">About Department of Parks and Recreation</span></a>
-            <ul class="m-0 p-0 list-inline text-right social">
-                <li class="list-inline-item"><a href="https://twitter.com/" aria-label="PARKS twitter link"
-                        class="no-underline"><span class="ca-gov-icon-twitter" aria-hidden="true"><span
-                                class="sr-only">Twitter</span></span></a></li>
-                <li class="list-inline-item"><a href="https://www.facebook.com/" aria-label="PARKS facebook link"
-                        class="no-underline"><span class="ca-gov-icon-facebook" aria-hidden="true"><span
-                                class="sr-only">Facebook</span></span></a></li>
-                <li class="list-inline-item"><a href="https://www.google.com/" aria-label="PARKS google plus link"
-                        class="no-underline"><span class="ca-gov-icon-google-plus" aria-hidden="true"><span
-                                class="sr-only">Google+</span></span></a></li>
-            </ul>
-        </div>
-    </div>
+ <div class="group-left">
+  <a class="pane-img" aria-label="Department of Parks and Recreation (PARKS)"
+   href="http://ca.gov/Agencies/Parks-and-Recreation-Department-of"
+   style="background: url('/images/sample/images/service-tiles/redwoods.jpg')"></a>
+ </div>
+ <div class="group-right section-primary">
+  <div class="pane-content">
+   <h3 class="m-b-0">Find a State Park</h3>
+   <h4 class="m-t-0"><a href="http://ca.gov/Agencies/Parks-and-Recreation-Department-of">Department of Parks
+     and Recreation (PARKS)</a></h4>
+   <p>Find a State Park near you via the Parks and Recreation website. You can search by name, feature, region,
+    city, county, or alphabetically.</p>
+   <a href="/profile-landing.html" class="btn btn-default"><span class="ca-gov-icon-info"></span> See Details
+    <span class="sr-only">About Department of Parks and Recreation</span></a>
+   <ul class="m-0 p-0 list-inline text-right social">
+    <li class="list-inline-item"><a href="https://twitter.com/" aria-label="PARKS twitter link"
+      class="no-underline"><span class="ca-gov-icon-twitter" aria-hidden="true"><span
+        class="sr-only">Twitter</span></span></a></li>
+    <li class="list-inline-item"><a href="https://www.facebook.com/" aria-label="PARKS facebook link"
+      class="no-underline"><span class="ca-gov-icon-facebook" aria-hidden="true"><span
+        class="sr-only">Facebook</span></span></a></li>
+    <li class="list-inline-item"><a href="https://www.google.com/" aria-label="PARKS google plus link"
+      class="no-underline"><span class="ca-gov-icon-google-plus" aria-hidden="true"><span
+        class="sr-only">Google+</span></span></a></li>
+   </ul>
+  </div>
+ </div>
 </div>
