--- a/src/_includes/modules/card-grid-basic.html
+++ b/src/_includes/modules/card-grid-basic.html
@@ -5,7 +5,8 @@
    <div class="card-body bg-gray-50">
     <h3 class="h4 m-y-sm">Card title</h3>
     <p class="m-b">Use the content found at the button link to inspire your card title.</p>
-    <a class="btn btn-primary p-x-md" href="#">Button <span class="sr-only">with link related to card title</span></a>
+    <a class="btn btn-primary p-x-md" href="javascript:;">Button <span class="sr-only">with link related to card
+      title</span></a>
    </div>
   </div>
 
@@ -17,7 +18,7 @@
     <h3 class="h4 m-y-sm">Title</h3>
     <p class="m-b">Cards use the <a href="/visual-design/typography.html">heading</a> text style for titles. Keep them
      short, concise, and consistent.</p>
-    <a class="btn btn-primary p-x-md" href="#">Button <span class="sr-only">with some link</span></a>
+    <a class="btn btn-primary p-x-md" href="javascript:;">Button <span class="sr-only">with some link</span></a>
    </div>
   </div>
 
@@ -28,7 +29,8 @@
    <div class="card-body bg-gray-50">
     <h3 class="h4 m-y-sm">Card body</h3>
     <p class="m-b">Use this space to briefly tell your reader what they will find at the card's destination.</p>
-    <a class="btn btn-primary p-x-md" href="#">Button <span class="sr-only">with link that goes somewhere</span></a>
+    <a class="btn btn-primary p-x-md" href="javascript:;">Button <span class="sr-only">with link that goes
+      somewhere</span></a>
    </div>
   </div>
 
