--- a/src/_includes/modules/feature-card.html
+++ b/src/_includes/modules/feature-card.html
@@ -4,10 +4,11 @@
    <h2 class="h3 m-t-0">Title</h2>
    <p>Highlight an action you want people to take or important information on the homepage.
    </p>
-   <a href="#" class="btn btn-primary m-y-md">Short link <span class="sr-only">(feature)</span></a>
+   <a href="javascript:;" class="btn btn-primary m-y-md">Short link <span class="sr-only">(feature)</span></a>
   </div>
   <div class="col-lg-8 col-md-6 p-0 text-right order-1 order-md-2 d-flex justify-content-center">
-   <a href="#" class="feature-img" style="background: url('/images/ocean.jpg')" aria-label="Feature card example image">
+   <a href="javascript:;" class="feature-img" style="background: url('/images/ocean.jpg')"
+    aria-label="Feature card example image">
    </a>
   </div>
  </div>
