--- a/src/_includes/modules/list-navigation-sub.html
+++ b/src/_includes/modules/list-navigation-sub.html
@@ -1,13 +1,13 @@
 <nav aria-label="list navigation with second level">
  <h3 class="h4">List navigation with sub navigation</h3>
  <ul class="list-navigation">
-  <li><a href="#">Breadcrumbs</a></li>
-  <li><a href="#">Side navigation</a>
+  <li><a href="javascript:;">Breadcrumbs</a></li>
+  <li><a href="javascript:;">Side navigation</a>
    <ul>
-    <li><a href="#" class="active">Readme</a></li>
-    <li><a href="#">Changelog</a></li>
+    <li><a href="javascript:;" class="active">Readme</a></li>
+    <li><a href="javascript:;">Changelog</a></li>
    </ul>
   </li>
-  <li><a href="#">Dropdown Navigation</a></li>
+  <li><a href="javascript:;">Dropdown Navigation</a></li>
  </ul>
 </nav>
