--- a/src/scss/bootstrap/scss/_close.scss
+++ b/src/scss/bootstrap/scss/_close.scss
@@ -1,6 +1,6 @@
 // transparent background and border properties included for button version.
 // iOS requires the button element instead of an anchor tag.
-// If you want the anchor version, it requires `href="#"`.
+// If you want the anchor version, it requires `href="javascript:;"`.
 // See https://developer.mozilla.org/en-US/docs/Web/Events/click#Safari_Mobile
 
 .btn-close {
