Update homepage based on QA

--- a/src/_includes/modules/three-cards-blue.html
+++ b/src/_includes/modules/three-cards-blue.html
@@ -1,5 +1,5 @@
 <div style="background:linear-gradient(116.74deg, #323A45 -40.07%, #046B99 66.75%);">
-	<div class="container">
+	<div class="partner-with-us container">
 		<div class="row">
 			<div class="half">
 				<div class="pb-3" style="max-width: 675px;">
@@ -27,7 +27,6 @@ We’d love to hear from you!</p>
 					<div class="m-b-0">
 						<img class="p-1" height="120px" src="/images/idea-icon.svg" alt="">
 					</div>
-
 					<div class="p-a align-self-center">
 						<p class="text-white">Have an idea or an issue?<br>
 							<a class="partner-link text-white" href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/issues">Reach out in GitHub</a>
