--- a/src/_includes/modules/two-cards.html
+++ b/src/_includes/modules/two-cards.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<h2 class="p-t-1 p-b-3">Who's using the new design</h2>
+	<h2 class="p-t-1 p-b-3">Who's using the new design system</h2>
 	<div class="row">
 		<div class="half m-b-md p-r-lg">
 			<div class="pos-rel m-b-0 overflow-hidden bg-white text-center" style="max-height: 400px;border:1px solid #cecece;border-bottom: 3px solid #cecece">
@@ -8,7 +8,7 @@
 
 			<div class="pt-3" style="min-height: 236px;">
 				<h3 class="h4 m-t-0 m-b-sm">
-					<a class="font-weight-bold color-gray-dark color-primary-hover text-decoration-none" href="https://broadbandforall.cdt.ca.gov/">Broadband for All</a>
+					Broadband for All
 				</h3>
 				<p>The State Web Template enabled a plug-and-play approach with components on the homepage. With less time spent on engineering, the team could focus more on content and design.</p>
 
@@ -29,7 +29,7 @@
 
 			<div class="pt-3" style="min-height: 236px;">
 				<h3 class="h4 m-t-0 m-b-sm">
-					<a class="font-weight-bold color-gray-dark color-primary-hover text-decoration-none" href="https://abortion.ca.gov/">California abortion access</a>
+					California abortion access
 				</h3>
 				<p>This site launched in three weeks! The new template gave the design team an ability to fast track the design and information architecture. The template proved critical in sharing official information on women’s health.</p>
 				<span>
