Patterns/Progress tracker-spacing,design,text #988

--- a/src/scss/cagov.core.scss
+++ b/src/scss/cagov.core.scss
@@ -81,6 +81,7 @@
 @import "cagov/icon-blocks.scss";
 @import "cagov/jobs.scss";
 @import "cagov/tables.scss";
+@import "cagov/timeline.scss";
 @import "cagov/lists.scss";
 @import "cagov/testimonials.scss";
 @import "cagov/blockquote.scss";
