updated download and setup page #990

--- a/src/scss/cagov/globals.scss
+++ b/src/scss/cagov/globals.scss
@@ -1038,6 +1038,30 @@ background-color: $outline-default-color !important;
  line-height: 1.6em !important;
 }
 
+.font-weight-200 {
+ font-weight: 200 !important;
+}
+.font-weight-300 {
+ font-weight: 300 !important;
+}
+.font-weight-400 {
+ font-weight: 400 !important;
+}
+.font-weight-500 {
+ font-weight: 500 !important;
+}
+.font-weight-600 {
+ font-weight: 600 !important;
+}
+.font-weight-700 {
+ font-weight: 700 !important;
+}
+.font-weight-800 {
+ font-weight: 800 !important;
+}
+.font-weight-900 {
+ font-weight: 900 !important;
+}
 .bold,
 .text-bold {
  font-weight: 700 !important;
