updated typography page #967

--- a/src/scss/cagov/globals.scss
+++ b/src/scss/cagov/globals.scss
@@ -551,6 +551,33 @@ background-color: $outline-default-color !important;
 .brd-transparent-after::after {
  border-color: transparent !important;
 }
+.brd-gray-100 {
+ border-color:$gray-100 !important;
+}
+.brd-gray-200 {
+ border-color:$gray-200 !important;
+}
+.brd-gray-300 {
+ border-color:$gray-300 !important;
+}
+.brd-gray-400 {
+ border-color:$gray-400 !important;
+}
+.brd-gray-500 {
+ border-color:$gray-500 !important;
+}
+.brd-gray-600 {
+ border-color:$gray-600 !important;
+}
+.brd-gray-700 {
+ border-color:$gray-700 !important;
+}
+.brd-gray-800 {
+ border-color:$gray-800 !important;
+}
+.brd-gray-900 {
+ border-color:$gray-900 !important;
+}
 .brd-0 {
  border: none;
 }
