Fixed breadcrumbs accessibility #971

--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -1,4 +1,4 @@
-<nav id="navigation" class="main-navigation dropdown">
+<nav id="navigation" class="main-navigation dropdown" aria-label="Main navigation">
  <ul id="nav_list" class="top-level-nav">
   <li class="nav-item">
        {% if landing === "Template updates" %}
