--- a/src/_includes/modules/breadcrumb.html
+++ b/src/_includes/modules/breadcrumb.html
@@ -1,4 +1,4 @@
-<nav aria-label="You are here">
+<nav aria-label="Breadcrumb">
  <ol class="breadcrumb">
   <li><a href="javascript:;" title="Home page">Breadcrumb 1</a></li>
   <li><a href="javascript:;" title="Examples landing page">Breadcrumb 2</a></li>
