Patterns/Progress tracker-spacing,design,text #988

--- a/src/_includes/modules/timeline.html
+++ b/src/_includes/modules/timeline.html
@@ -18,7 +18,7 @@
                             <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
                         </div>
                         <!-- End Timeline Dot -->
-                        <p class="m-b-md no-bottom-margin"><br>Briefly discuss the step or identify the milestone.<br><br></p>
+                        <p class="m-b-0 m-b-0-mobile"><br>Briefly discuss the step or identify the milestone.<br><br><br></p>
 
                     </div>
                     <!-- End Timeline Content -->
@@ -40,7 +40,7 @@
                         </div>
                         <!-- End Timeline Dot -->
 
-                        <p class="m-b-md no-bottom-margin"><br>Keep the message clear and concise.<br><br></p>
+                        <p class="m-b-0 m-b-0-mobile"><br>Keep the message clear and concise.<br><br><br></p>
 
                     </div>
                     <!-- End Timeline Content -->
@@ -62,7 +62,7 @@
                         </div>
                         <!-- End Timeline Dot -->
 
-                        <p class="m-b-md no-bottom-margin"><br>Do not link to more information from the tracker.<br><br></p>
+                        <p class="m-b-0 m-b-0-mobile"><br>Do not link to more information from the tracker.<br><br><br></p>
 
                     </div>
                     <!-- End Timeline Content -->
@@ -83,7 +83,7 @@
                             <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
                         </div>
                         <!-- End Timeline Dot -->
-                        <p class="m-b-md no-bottom-margin"><br>Instead, link to additional information in your body content or tracker caption.<br>
+                        <p class="m-b-0 m-b-0-mobile"><br>Instead, link to additional information in your body content or tracker caption.<br><br>
                         </p>
 
                     </div>
