Updated sitemap and removed inline css #989

--- a/src/scss/cagov.core.scss
+++ b/src/scss/cagov.core.scss
@@ -106,4 +106,4 @@
 //
 // ORGANIZATION CUSTOM STYLES HERE
 // --------------------------------------------------
-// @import "orgname/custom.scss";
+@import "custom/custom.scss";
