updated download and setup page

--- a/src/scss/cagov/step-list.scss
+++ b/src/scss/cagov/step-list.scss
@@ -4,7 +4,7 @@
 
 .cagov-step-list {
  padding-left: 0 !important;
- margin-left: 26px !important;
+ margin-left: 1.5rem !important;
  counter-reset: step-list-count;
 
  li {
