--- a/src/_includes/modules/timeline.html
+++ b/src/_includes/modules/timeline.html
@@ -8,7 +8,7 @@
                     <!-- Timeline Date -->
                     <div class="col-md-3 text-md-end p-r-md">
                         <div class="h5 m-t m-b-0">Step 1 Contributor</div>
-                        <div class="h6 m-y-0">Q1 - Q2</div>
+                        <div class="h6 m-y-0">Month and year</div>
                     </div>
                     <!-- End Timeline Date -->
                     <!-- Timeline Content -->
@@ -29,7 +29,7 @@
                     <!-- Timeline Date -->
                     <div class="col-md-3  text-md-end p-r-md">
                         <div class="h5 m-t m-b-0">Step 2 Contributor</div>
-                        <div class="h6 m-y-0">Q2 - Q3</div>
+                        <div class="h6 m-y-0">Month and year</div>
                     </div>
                     <!-- End Timeline Date -->
                     <!-- Timeline Content -->
@@ -51,7 +51,7 @@
                     <!-- Timeline Date -->
                     <div class="col-md-3 text-md-end p-r-md">
                         <div class="h5 m-t m-b-0">Step 3 Contributor</div>
-                        <div class="h6 m-y-0">Q3 - Q4</div>
+                        <div class="h6 m-y-0">Month and year</div>
                     </div>
                     <!-- End Timeline Date -->
                     <!-- Timeline Content -->
@@ -73,7 +73,7 @@
                     <!-- Timeline Date -->
                     <div class="col-md-3 text-md-end p-r-md">
                         <div class="h5 m-t m-b-0">Step 4 Contributor</div>
-                        <div class="h6 m-y-0">Q4 - Q1</div>
+                        <div class="h6 m-y-0">Month and year</div>
                     </div>
                     <!-- End Timeline Date -->
                     <!-- Timeline Content -->
