What's new in V6 - Element IDs are not unique #956

--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -43,9 +43,9 @@
    </li>
    <li class="nav-item">
        {% if landing === "Components" %}
-       <a class="first-level-link active" href="/components.html">Components</a>
+       <a class="first-level-link active" href="/components.html">Component updates</a>
        {% else %}
-       <a class="first-level-link" href="/components.html">Components</a>
+       <a class="first-level-link" href="/components.html">Component updates</a>
        {% endif %} 
    </li>
    <li class="nav-item">
