--- a/src/_includes/modules/two-cards.html
+++ b/src/_includes/modules/two-cards.html
@@ -2,7 +2,7 @@
 	<h2 class="p-t-1 p-b-3">Who's using the new design system</h2>
 	<div class="row">
 		<div class="half m-b-md p-r-lg">
-			<div class="pos-rel m-b-0 overflow-hidden bg-white text-center" style="max-height: 400px;border:1px solid #cecece;border-bottom: 3px solid #cecece">
+			<div class="pos-rel m-b-0 overflow-hidden bg-white text-center" style="max-height: 400px;border:1px solid #cecece;">
 				<img class="w-100" src="/images/bbfa-example.jpg" alt="Homepage screenshot of Broadband for all website.">
 			</div>
 
@@ -23,7 +23,7 @@
 		</div>
 
 		<div class="half m-b-md p-l-lg">
-			<div class="pos-rel m-b-0 overflow-hidden bg-white text-center" style="max-height: 400px;border:1px solid #cecece;border-bottom: 3px solid #cecece">
+			<div class="pos-rel m-b-0 overflow-hidden bg-white text-center" style="max-height: 400px;border:1px solid #cecece;">
 				<img class="w-100" src="/images/caaba-example.jpg" alt="Homepage screenshot of California's Abortion Access Portal website.">
 			</div>
 
