updated content us form styles #952 #525

--- a/src/scss/cagov/forms.scss
+++ b/src/scss/cagov/forms.scss
@@ -7,11 +7,13 @@
 .custom-select {
 	border-radius: $border-radius-base;
 	border-color: $input-border;
+ font-size: 1.375rem;
 }
 
 label {
 	font-weight: 600;
  font-size: $font-size-regular;
+ margin-bottom: 0.5rem;
 }
 .input-group-text {
 	border-radius: $border-radius-base;
