--- a/src/scss/cagov/globals.scss
+++ b/src/scss/cagov/globals.scss
@@ -406,6 +406,9 @@ outline: 1px solid $gray-200;
 .outline-color, .outline-color:hover, .outline-color:focus {
  color: $outline-default-color !important;
 }
+.color-red {
+ color: $brand-danger !important;
+}
 
 // light backgrounds
 .bg-white {
@@ -523,8 +526,9 @@ background-color: $outline-default-color !important;
 .bg-alpha-90 {
  background-color: rgba(0, 0, 0, 0.9) !important;
 }
-
-
+.bg-red {
+ background-color: $brand-danger !important;
+}
 
 /*------------------------------------
   borders colors and styles
@@ -577,6 +581,9 @@ background-color: $outline-default-color !important;
 }
 .brd-gray-900 {
  border-color:$gray-900 !important;
+}
+.brd-red {
+ border-color: $brand-danger !important;
 }
 .brd-0 {
  border: none;
