--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -12,7 +12,7 @@ $brand-success: #32852e;
 // @brand-info:         #02BFE7;
 $brand-info: #1c7db5;
 $brand-warning: #c2570f;
-$brand-danger: #d24532;
+$brand-danger: #cd402d;
 
 // == Social Media Brand Colors
 $share-facebook: #3c5a99;
