--- a/src/scss/cagov/page-navigation.scss
+++ b/src/scss/cagov/page-navigation.scss
@@ -120,7 +120,7 @@
    padding: 0;
    margin: 0;
    margin-bottom: .3rem;
-   font-size: $font-size-h6; // ~14px
+   font-size: calc(#{$font-size-small} + #{$ratio});
 
 
    a {
