--- a/src/_includes/modules/two-cards.html
+++ b/src/_includes/modules/two-cards.html
@@ -12,8 +12,8 @@
 				</h3>
 				<p>The State Web Template enabled a plug-and-play approach with components on the homepage. With less time spent on engineering, the team could focus more on content and design.</p>
 
-				<span>
-					<svg width="31px" style="margin-right: .5rem;" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 23"><path d="m19 22.1-1.1-1 8.8-8.8H0v-1.6h26.7L17.9 2 19 1l10.6 10.6L19 22.1Z" fill="#046B99"/></svg>
+				<span class="d-flex flex-center">
+					<svg width="31px" class="m-r-sm" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 23"><path d="m19 22.1-1.1-1 8.8-8.8H0v-1.6h26.7L17.9 2 19 1l10.6 10.6L19 22.1Z" fill="#046B99"/></svg>
 					<a class="font-weight-bold" href="https://broadbandforall.cdt.ca.gov/">
 					broadbandforall.cdt.ca.gov
 				</a>
@@ -32,8 +32,8 @@
 					California abortion access
 				</h3>
 				<p>This site launched in three weeks! The new template gave the design team an ability to fast track the design and information architecture. The template proved critical in sharing official information on women’s health.</p>
-				<span>
-					<svg width="31px" style="margin-right: .5rem;" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 23"><path d="m19 22.1-1.1-1 8.8-8.8H0v-1.6h26.7L17.9 2 19 1l10.6 10.6L19 22.1Z" fill="#046B99"/></svg>
+				<span class="d-flex flex-center">
+					<svg width="31px" class="m-r-sm" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 23"><path d="m19 22.1-1.1-1 8.8-8.8H0v-1.6h26.7L17.9 2 19 1l10.6 10.6L19 22.1Z" fill="#046B99"/></svg>
 					<a class="font-weight-bold" href="https://abortion.ca.gov/">
 					abortion.ca.gov
 				</a>
