--- a/src/_includes/modules/three-cards-blue.html
+++ b/src/_includes/modules/three-cards-blue.html
@@ -29,7 +29,7 @@ We’d love to hear from you!</p>
 					</div>
 					<div class="p-a align-self-center">
 						<p class="text-white">Have an idea or an issue?<br>
-							<a class="partner-link text-white" href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/issues">Reach out in GitHub</a>
+							<a class="partner-link text-white font-weight-bolder" href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/issues">Reach out in GitHub</a>
 						</p>
 					</div>
 				</div>
@@ -43,7 +43,7 @@ We’d love to hear from you!</p>
 
 					<div class="p-a align-self-center">
 						<p class="text-white">Want to give website feedback?<br>
-							<a class="partner-link text-white" href="https://airtable.com/shro9V6ry2Cf4mpgG">Fill out this form</a>
+							<a class="partner-link text-white font-weight-bolder" href="https://airtable.com/shro9V6ry2Cf4mpgG">Fill out this form</a>
 						</p>
 					</div>
 				</div>
@@ -57,7 +57,7 @@ We’d love to hear from you!</p>
 
 					<div class="p-a align-self-center">
 						<p class="text-white">Need template support?<br>
-							<a class="partner-link text-white" href="/contact-us.html">Email the team</a>
+							<a class="partner-link text-white font-weight-bolder" href="/contact-us.html">Email the team</a>
 						</p>
 					</div>
 				</div>
